# mpi-matrices

./: .gitignore  CMakeLists.txt  Makefile  hosts  hosts.old  m1  m1L  m1U  m2  m2L  m2U  m3  m3L  m3U  mat  mat2  mat2dense  matL  matU  matrix1  matrix2  matrixMedium  nos4.mtx  verybig
src/: cg.cpp  cg.h  dense_matrix.cpp  dense_matrix.h  direction.h  generator.cpp  generator.h  main.cpp  mpimatrix.cpp  mpimatrix.h  mpimatrix_cg.cpp  mpimatrix_lu.cpp  mpimatrix_op.cpp  mpimatrix_prec.cpp  sparse_matrix.cpp  sparse_matrix.h  sparse_matrix_elem.h  sparse_matrix_op.cpp  sparse_vector.cpp  sparse_vector.h  sparse_vector_op.cpp
src/tests/: tests.cpp
